[package]
name = "steganography"
version = "0.1.0"
edition = "2021"
authors = ["Nguyen Thai Binh <binhnt.dev@icloud.com>"]
license = "MIT"
description = "A `rust` crate for performing steganography on PNG images and more!"
homepage = "https://github.com/SaltedPeanutButter/steganography-rs"
repository = "https://github.com/SaltedPeanutButter/steganography-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "steganography_lib"
path = "src/steganography/lib.rs"

[[bin]]
name = "steganography_cli"
path = "src/cli.rs"

[[bin]]
name = "steganography_repl"
path = "src/repl.rs"

[[bin]]
name = "steganography_api"
path = "src/api/main.rs"

[dependencies]
flate2 = "1.0.26"
png = "0.17.8"
rand = "0.8.5"
rocket = "=0.5.0-rc.3"
